feat: extracting json

--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 axum = "0.6.20"
 cargo-watch = "8.4.1"
+serde = { version = "1.0.188", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
