--- a/routing/Cargo.toml
+++ b/routing/Cargo.toml
@@ -10,3 +10,4 @@ axum = { version = "0.6.20", features = ["headers"] }
 cargo-watch = "8.4.1"
 serde = { version = "1.0.188", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+tower-http = { version = "0.4.4", features = ["cors"] }
